--- a/charts/dataplane/templates/postgres/warehouse.yaml
+++ b/charts/dataplane/templates/postgres/warehouse.yaml
@@ -22,9 +22,15 @@ spec:
     admin:
       - superuser
       - createdb
-    {{ .Values.zalando.warehouse.user }}: []
+    {{ include "dataplane.warehouse.owner.name" . }}: []
   databases:
-    {{ include "dataplane.warehouse.db" . }}: {{ .Values.zalando.warehouse.user }}
+    {{ include "dataplane.warehouse.db" . }}: {{ include "dataplane.warehouse.owner.name" . }}
+  preparedDatabases:
+    {{ include "dataplane.warehouse.db" . }}:
+      defaultUsers: true
+      schemas:
+        public:
+          defaultUsers: false
   postgresql:
     version: "{{ .Values.zalando.warehouse.version }}"
 {{- end }}
