--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -3,6 +3,14 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+util:
+
+  image:
+    repository: nephelaiio/dataplane-util
+    pullPolicy: IfNotPresent
+    tag: 0.0.6
+  resources: {}
+
 cdc:
 
     postgres: []
@@ -29,11 +37,9 @@ strimzi:
       class: ""
 
   connect:
-
     image:
       repository: nephelaiio/dataplane-connect
       latest: 0.0.6
-
     replicas: 1
     config:
       group.id: connect-cluster
@@ -76,31 +82,30 @@ zalando:
 
 metabase:
 
+  db: dataplane
+
   replicaCount: 2
 
+  admin:
+    firstName: Metabase
+    lastName: Admin
+    email: metabase@nephelai.io
+
   init:
-
     enabled: true
-
     image:
       repository: nephelaiio/dataplane-util
       pullPolicy: IfNotPresent
       tag: 0.0.6
-
-    user:
-      firstName: John
-      lastName: Doe
-      email: xyabzc@gmail.com
-
     securityContext: {}
 
   image:
     repository: metabase/metabase
     pullPolicy: IfNotPresent
-    tag: "v0.44.2"
+    tag: "v0.44.6"
 
   ingress:
-    enabled: false
+    enabled: true
     annotations: {}
     hostName: ""
     className: ""
@@ -140,33 +145,9 @@ registry:
       value: "true"
 
   securityContext: {}
-
   podSecurityContext: {}
-
   podAnnotations: {}
-
   resources: {}
-
   nodeSelector: {}
-
   tolerations: []
-
   affinity: {}
-
-  init:
-
-    image:
-      repository: nephelaiio/dataplane-util
-      pullPolicy: IfNotPresent
-      tag: 0.0.6
-
-    resources: {}
-
-  hook:
-
-    image:
-      repository: nephelaiio/dataplane-util
-      pullPolicy: IfNotPresent
-      tag: 0.0.6
-
-    resources: {}
