--- a/charts/dataplane/templates/metabase/secret.yaml
+++ b/charts/dataplane/templates/metabase/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "dataplane.metabase.setup.secretName" . }}
+  name: {{ include "dataplane.metabase.admin.secret" . }}
 type: Opaque
 data:
-{{- ( include "dataplane.metabase.setup.secretData" . ) | indent 2 -}}
+{{- ( include "dataplane.metabase.admin.secretData" . ) | indent 2 -}}
