Fix lint errors

--- a/charts/dataplane/templates/metabase/ingress.yaml
+++ b/charts/dataplane/templates/metabase/ingress.yaml
@@ -2,19 +2,8 @@
 {{- if .Values.metabase.ingress.enabled -}}
 {{- $fullName := include "dataplane.metabase.fullname" . -}}
 {{- $secretName := include "dataplane.metabase.ingress.secretName" . -}}
-{{- $svcPort := .Values.metabase.service.port -}}
-{{- if and .Values.metabase.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.metabase.ingress.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.metabase.ingress.annotations "kubernetes.io/ingress.class" .Values.metabase.ingress.className}}
-  {{- end }}
-{{- end }}
-{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- $svcPort := .Values.metabase.service.port }}
 apiVersion: networking.k8s.io/v1
-{{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1
-{{- else -}}
-apiVersion: networking.k8s.io/v1
-{{- end }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
