Fix syntax for verification play

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -197,7 +197,8 @@
           }}"
 
       - name: debug metabase connection data
-        msg: "host={{ metabase_host }}, hostname={{ dataplane_metabase_hostname }}, user={{ metabse_user }}, password={{ metabase_pass }}"
+        ansible.buitin.debug:
+          msg: "host={{ metabase_host }}, hostname={{ dataplane_metabase_hostname }}, user={{ metabse_user }}, password={{ metabase_pass }}"
 
       - name: log in to metabase
         ansible.builtin.uri:
