Fix task syntax

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -199,6 +199,7 @@
       - name: debug metabase connection data
         ansible.builtin.debug:
           msg: "host={{ metabase_host }}, hostname={{ dataplane_metabase_hostname }}, user={{ metabase_user }}, password={{ metabase_pass }}"
+        ignore_errors: true
 
       - name: log in to metabase
         ansible.builtin.uri:
