--- a/molecule/default/side_effect.yml
+++ b/molecule/default/side_effect.yml
@@ -20,3 +20,28 @@
         kubeconfig: "{{ k8s_kubeconfig }}"
         binary_path: "{{ k8s_helm_bin }}"
         values: "{{ dataplane_chart_values }}"
+
+    - name: query connection data
+      ansible.builtin.set_fact:
+        pagila_src_user: "{{ pagila_db_secret_data.data.username | b64decode }}"
+        pagila_src_pass: "{{ pagila_db_secret_data.data.password | b64decode }}"
+      vars:
+        pagila_db_secret_name: "{{ dataplane_pagila_user }}-{{ dataplane_pagila_team }}-{{ dataplane_pagila_db }}"
+        pagila_db_secret_data: "{{ secret_query | selectattr('metadata.name', 'equalto', pagila_db_secret_name) | first }}"
+        secret_query: "{{
+          query(
+            'kubernetes.core.k8s',
+            namespace=dataplane_pagila_namespace,
+            kind='Secret',
+            kubeconfig=k8s_kubeconfig
+          )
+        }}"
+
+    - name: create pagila table
+      community.postgresql.postgresql_db:
+        name: "{{ dataplane_pagila_db }}"
+        login_user: "{{ pagila_src_user }}"
+        login_password: "{{ pagila_src_pass }}"
+        login_host: "{{ pagila_src_host }}"
+        target: "{{ datadir.path }}/pagila.sql"
+      changed_when: false
